--- a/VaccineAppointmentFronted/index.html
+++ b/VaccineAppointmentFronted/index.html
@@ -52,7 +52,7 @@
         <!-- <img src="./images/covishield1.jpg" id="imgtag"> -->
       </div>
       <div >
-        <img src="./images/covishield vaxin.jpg" alt="...">
+        <img src="./images/covishield vaxin.jpg" alt="Vaccine" class="img-fluid">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
